fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/X2020_PreClass_Letter__c.field-meta.xml
<CustomField>
    <fullName>X2020_PreClass_Letter__c</fullName>
    <label>2020 PreClass Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>