fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/X2020_Support_Type_4Hr_2Hr_Fellows__c.field-meta.xml
<CustomField>
    <fullName>X2020_Support_Type_4Hr_2Hr_Fellows__c</fullName>
    <inlineHelpText>4Hr, 2Hr,Fellows or Inservice</inlineHelpText>
    <label>2020 Support Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>