fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/X2022_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>X2022_Support_Type__c</fullName>
    <label>2022 Support Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>