fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Zip5__c.field-meta.xml
<CustomField>
    <fullName>Zip5__c</fullName>
    <description>Account&apos;s ZipCode 5 Digit</description>
    <formula>MID( Account__r.BillingPostalCode, 0, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account&apos;s ZipCode 5 Digit</inlineHelpText>
    <label>Zip5</label>
    <type>Text</type>
</CustomField>