fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/listViews/MyProfiles.listView-meta.xml
<ListView>
    <fullName>MyProfiles</fullName>
    <columns>NAME</columns>
    <columns>Rep__c</columns>
    <columns>Account__c</columns>
    <columns>State__c</columns>
    <columns>IDN_Alignment__c</columns>
    <columns>X1st_Month__c</columns>
    <columns>Pump_Manufacturer__c</columns>
    <columns>Pump_Model__c</columns>
    <columns>Quantity__c</columns>
    <columns>Age_of_Pumps_Years__c</columns>
    <columns>Status_Include_Date_mm_day_yr__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Profiles</label>
</ListView>